--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "await": "^0.2.6",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "mongoose": "^5.2.17",
+    "mongoose": "^5.3.2",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "npm-check-updates": "^2.14.2",
+    "rss-parser": "^3.5.2"
   }
 }
